Correction : affichage du coeur pour la version tablette et plus

--- a/assets/css/restaurants.scss
+++ b/assets/css/restaurants.scss
@@ -310,6 +310,33 @@
         }
     }
 
+    .restaurant__like {
+    position : relative;
+    &__switch{
+      display : inline-block;
+    }
+    &--empty {
+        width : 29px;
+        height : 80px;
+        transition : opacity 600ms ease;
+        position : absolute;
+        top : -30px;
+        right : -30px;
+        left : 0;
+        cursor: pointer;
+    }
+    &--full {
+        width : 29px;
+        height : 80px;
+        transition : opacity 600ms ease;
+        position : absolute;
+        top : -30px;
+        right : -30px;
+        left : 0;
+        cursor: pointer;
+    }
+  }
+
     .footer {
         display : flex;
         flex-direction: row-reverse;
